[gd_scene load_steps=4 format=3 uid="uid://q7ihls12mnkk"]

[ext_resource type="Script" path="res://Spiritbullet.gd" id="1_dlnnc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qa21a"]
size = Vector2(9.5, 5)

[sub_resource type="SphereMesh" id="SphereMesh_75sha"]

[node name="Bullet" type="Area2D"]
script = ExtResource("1_dlnnc")
metadata/Delete = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.75, 0.5)
shape = SubResource("RectangleShape2D_qa21a")
metadata/Delete = false

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(1, 1, 1, 0.243137)
position = Vector2(-2, 1)
scale = Vector2(8.50907, 7.5)
mesh = SubResource("SphereMesh_75sha")

[node name="HomeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="." to="." method="_on_area_enter"]
[connection signal="timeout" from="HomeTimer" to="." method="_on_home_timer_timeout"]
